--- a/Task 3/app/templates/error.html
+++ b/Task 3/app/templates/error.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <h1>{{ status.value }} - {{ status.phrase }}</h1>
-    <p style="color:red;">{{ error }}</p>
-
+    <p style="color:red;">{{ error.description | safe }}</p>
     <p><a href="{{ url_for('web.home') }}">Return to Home</a></p>
 </body>
 </html>
