--- a/Task 3/app/templates/home.html
+++ b/Task 3/app/templates/home.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>All Data Points</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>All Data Points</h1>
-
-    <p><a href="{{ url_for('web.add') }}">Add New Data Point</a></p>
-
+    <h1>Your data points</h1>
+    <p><a href="{{ url_for('web.add') }}">Add a new data point</a></p>
+    <p><a href="{{ url_for('web.predict') }}">
+        Predict category of a data point</a></p>
     <table border="1" cellpadding="5" cellspacing="0">
         <thead>
             <tr>
