--- a/Task 3/app/templates/error.html
+++ b/Task 3/app/templates/error.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='style.css') }}">
     <title>{{ status.value }} - {{ status.phrase }}</title>
 </head>
 <body>
-    <h1>{{ status.value }} - {{ status.phrase }}</h1>
-    <p style="color:red;">{{ error.description | safe }}</p>
-    <p><a href="{{ url_for('web.home') }}">Return to Home</a></p>
+<h1>{{ status.value }} - {{ status.phrase }}</h1>
+<p style="color:red;">{{ error.description | safe }}</p>
+<p><a href="{{ url_for('web.home') }}">Return to Home</a></p>
 </body>
 </html>
