--- a/Task 3/app/templates/home.html
+++ b/Task 3/app/templates/home.html
@@ -2,42 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='style.css') }}">
     <title>Home</title>
 </head>
 <body>
-    <h1>Your data points</h1>
-    <p><a href="{{ url_for('web.add') }}">Add a new data point</a></p>
-    <p><a href="{{ url_for('web.predict') }}">
-        Predict category of a data point</a></p>
-    <table border="1" cellpadding="5" cellspacing="0">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Width</th>
-                <th>Height</th>
-                <th>Length</th>
-                <th>Weight</th>
-                <th>Category</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for d in data_points %}
-            <tr>
-                <td>{{ loop.index }}</td>
-                <td>{{ d.width }}</td>
-                <td>{{ d.height }}</td>
-                <td>{{ d.length }}</td>
-                <td>{{ d.weight }}</td>
-                <td>{{ d.category }}</td>
-                <td>
-                    <form method="POST" action="{{ url_for('web.delete', point_id=d.id) }}" style="display:inline;">
-                        <button type="submit">Delete</button>
-                    </form>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<h1>Your data points</h1>
+<div class="multi-action">
+    <p>
+        <a href="{{ url_for('web.add') }}">
+            Add a new data point</a>
+    </p>
+    <p>
+        <a href="{{ url_for('web.predict') }}">
+            Predict category of a data point</a></p>
+</div>
+
+{% if data_points %}
+<table>
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>Width</th>
+        <th>Height</th>
+        <th>Length</th>
+        <th>Weight</th>
+        <th>Category</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for d in data_points %}
+    <tr>
+        <td>{{ loop.index }}</td>
+        <td>{{ d.width }}</td>
+        <td>{{ d.height }}</td>
+        <td>{{ d.length }}</td>
+        <td>{{ d.weight }}</td>
+        <td>{{ d.category }}</td>
+        <td>
+            <form method="POST"
+                  action="{{ url_for('web.delete', point_id=d.id) }}">
+                <button type="submit" class="del">Delete</button>
+            </form>
+        </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
+{% else %}
+<p>Database is currently empty!</p>
+<form method="POST" action={{url_for('web.init') }}>
+    <button type="submit">Initialize random data points</button>
+</form>
+{% endif %}
 </body>
 </html>
