--- a/Task 3/app/templates/predict.html
+++ b/Task 3/app/templates/predict.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='style.css') }}">
     <title>Add</title>
 </head>
 <body>
-    <h1>Fill in the values below to predict the category
-        of a potential data point.</h1>
+<h1>Predict category</h1>
+<h2>Fill in the values below to predict the category
+    of a potential data point.</h2>
 <form method="POST" action="{{ url_for('web.predict') }}">
     <label>Width:
         <input name="width">
@@ -22,6 +25,6 @@
     </label><br>
     <button type="submit">Predict</button>
 </form>
-    <p><a href="{{ url_for('web.home') }}">Return to Home</a></p>
+<p><a href="{{ url_for('web.home') }}">Return to Home</a></p>
 </body>
 </html>
