--- a/Task 3/app/templates/add.html
+++ b/Task 3/app/templates/add.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='style.css') }}">
+    <link href="{{ url_for('static', filename='style.css') }}"
+          rel="stylesheet">
     <title>Add</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
 <h2>Fill in the values below to add
     a new data point to database.</h2>
 
-<form method="POST" action="{{ url_for('web.add') }}">
+<form action="{{ url_for('web.add') }}" method="POST">
     <label>Category:
         <input name="category">
     </label><br>
