--- a/Task 3/app/templates/home.html
+++ b/Task 3/app/templates/home.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='style.css') }}">
+    <link href="{{ url_for('static', filename='style.css') }}"
+          rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
@@ -41,9 +41,9 @@
         <td>{{ d.weight }}</td>
         <td>{{ d.category }}</td>
         <td>
-            <form method="POST"
-                  action="{{ url_for('web.delete', point_id=d.id) }}">
-                <button type="submit" class="del">Delete</button>
+            <form action="{{ url_for('web.delete', point_id=d.id) }}"
+                  method="POST">
+                <button class="del" type="submit">Delete</button>
             </form>
         </td>
     </tr>
@@ -52,7 +52,7 @@
 </table>
 {% else %}
 <p>Database is currently empty!</p>
-<form method="POST" action={{url_for('web.init') }}>
+<form action={{url_for('web.init') method="POST" }}>
     <button type="submit">Initialize random data points</button>
 </form>
 {% endif %}
