--- a/Task 3/app/templates/predict.html
+++ b/Task 3/app/templates/predict.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='style.css') }}">
+    <link href="{{ url_for('static', filename='style.css') }}"
+          rel="stylesheet">
     <title>Add</title>
 </head>
 <body>
 <h1>Predict category</h1>
 <h2>Fill in the values below to predict the category
     of a potential data point.</h2>
-<form method="POST" action="{{ url_for('web.predict') }}">
+<form action="{{ url_for('web.predict') }}" method="POST">
     <label>Width:
         <input name="width">
     </label><br>
