--- a/Task 3/app/templates/prediction_result.html
+++ b/Task 3/app/templates/prediction_result.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='style.css') }}">
+    <link href="{{ url_for('static', filename='style.css') }}"
+          rel="stylesheet">
     <title>Prediction Result</title>
 </head>
 <body>
